# cmd/api/docs/swagger.json
@@ -1406,43 +1406,6 @@
                 }
             }
         },
-        "/api/v1/realtime/metrics": {
-            "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Admin only",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "realtime"
-                ],
-                "summary": "Realtime metrics",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/clap_internal_shared_response.Response"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/clap_internal_shared_response.Response"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/clap_internal_shared_response.Response"
-                        }
-                    }
-                }
-            }
-        },
         "/api/v1/realtime/session/{matchId}": {
             "get": {
                 "security": [
